--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <a href="index.html">Home Page</a>
         </li>
         <li class="specialNav">
-          <a href="">Marlonia</a>
+          <a href="marlonia.html">Marlonia</a>
         </li>
         <li class="specialNav">
-          <a href="">Icetralia</a>
+          <a href="about_us.html">Icetralia</a>
         </li>
       </ul>
     </nav>
